--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                     <h3><span>Language:</span>English,Gujarati,Hindi</h3>
                     <h3><span>Github Link:</span><a href="https://github.com/prachimaheta">Visit My Githhub Profile</a></h3>
                     <h3><span>LinkedIn:</span><a href="https://www.linkedin.com/in/prachi-maheta-7246062bb/">Visit My LinkedIn Profile</a></h3>
-                    <a href="C:\Users\hkmeh\OneDrive\Desktop\Resume .pdf" ><button class="btn">Download CV<i class="fas fa-download"></i></button></a>
+                    <a href="C:\Users\hkmeh\OneDrive\Desktop\RESUME.pdf" ><button class="btn">Download CV<i class="fas fa-download"></i></button></a>
                 </div>
               </div>
         </section>
