--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="portfolio.css">
     </head>
     <body>
+
         <!--header section starts-->
         <header>
             <div class="user">
@@ -23,6 +24,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -64,24 +66,27 @@
                   <div class="box">
                     <i class="fas fa graduation-cap"></i>
                         <span>2018-2019</span>
-                        <h3> Secondary School,GSEB</h3>
+                        <h3> SSC,GSEB</h3>
                         <p>V.J.Modi School,Rajkot</p>
+                        <a href="C:\Users\hkmeh\OneDrive\Documents\10th marksheet.pdf"><button class="btn">Show SSC result<i class="fas fa-download"></i></a>
                   </div>
               </div>
               <div class="box-container">
                 <div class="box">
                   <i class="fas fa graduation-cap"></i>
                       <span>2019-2021</span>
-                      <h3>Higher Secondary School,GSEB</h3>
+                      <h3>HSC,GSEB</h3>
                       <p>P.V.Modi School,Rajkot</p>
+                      <a href="C:\Users\hkmeh\OneDrive\Documents\12th marksheet.pdf"><button class="btn">Show HSC result<i class="fas fa-download"></i></a>
                 </div>
             </div>
             <div class="box-container">
                 <div class="box">
                   <i class="fas fa graduation-cap"></i>
                       <span>2021-2025</span>
-                      <h3>B.E-Information Technology</h3>
+                      <h3>B.E-I.T.</h3>
                       <p>V.V.P Engineering College | GTU,Rajkot</p>
+                      <a href="C:\Users\hkmeh\OneDrive\Documents\grade history.pdf"><button class="btn">Show GTU GradHistory<i class="fas fa-download"></i></a>
                 </div>
             </div>
         </section>
@@ -121,6 +126,55 @@
             </div>   
         </section>
         <!--skills section ends-->
+        <!--Achievements Section starts-->
+        <section class="achievements" id="achievements">
+            <h1 class="heading">My <span>Achievements</span></h1>
+            <div class="box-container">
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>Dec-2022</span>
+                    <h3>Full Stack Web Development</h3>
+                    <p>TOPS Technologies Pvt.Ltd</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_4170b682-3ad5-4007-9e43-a52723b1518820240410_093510.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a>
+                </div>
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>Jun-2023</span>
+                    <h3>Learn HTML/CSS</h3>
+                    <p>CodeChef</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_f287b94c-6b48-41c4-a0ef-b8cc803081ac20240410_093516.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a> 
+                </div>
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>Jun-2023</span>
+                    <h3>Learn Java</h3>
+                    <p>CodeChef</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_0c697d9d-a3e8-4a38-99e4-a93ed2e893d820240410_093521.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a>
+                </div>
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>April-2023</span>
+                    <h3>Kalagi-2023</h3>
+                    <p>V.V.P Engineering College</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_61b68fba-7b2d-4957-8851-d04e2f602c4c20240410_093525.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a>
+                </div>
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>April-2023</span>
+                    <h3>Volunteer in EkLavya & Shaurya</h3>
+                    <p>V.V.P Engineering College</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_40eb94a2-2e39-4bf7-8fb2-f331c242597620240410_093529.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a>
+                </div>
+                <div class="box">
+                    <i class="fas fa graduation-cap"></i>
+                    <span>April-2024</span>
+                    <h3>C for Beginners</h3>
+                    <p>Great Learning</p>
+                    <a href="C:\Users\hkmeh\OneDrive\Documents\image_62acea68-4c8e-4301-b0a1-336efee35a7920240410_093507.jpg"><button class="btn">Show Certificate<i class="fas fa-download"></i></a>
+                </div>
+            </div>
+        </section>
+        <!--Achievements section ends-->
         <!--contact section start-->
         <section class="contact" id="contact">
             <h1 class="heading"><span>Contact</span> Me</h1>
